--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>p5</title>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <script src="Rockets.js"></script>
+	<script defer src=http://p5js.org/assets/js/p5.min.js></script>
+	<script defer src=http://p5js.org/assets/js/p5.dom.min.js></script>
+	    <script src="Rockets.js"></script>
 </head>
 <body>
 
