--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>p5</title>
 	<script defer src=http://p5js.org/assets/js/p5.min.js></script>
 	<script defer src=http://p5js.org/assets/js/p5.dom.min.js></script>
-	    <script src="Rockets.js"></script>
+	<script src="Rockets.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8" />
 </head>
 <body>
 
