--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>p5</title>
-	<script defer src=http://p5js.org/assets/js/p5.min.js></script>
-	<script defer src=http://p5js.org/assets/js/p5.dom.min.js></script>
-	<script src="Rockets.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="utf-8" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8" />
+
 </head>
+
 <body>
+  <script src="sketch.js"></script>
+  <script src="dna.js"></script>
+  <script src="population.js"></script>
+  <script src="rocket.js"></script>
 
 </body>
+
 </html>
