--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="sketch.js"></script>
   <script src="dna.js"></script>
   <script src="population.js"></script>
-  <script src="rocket.js"></script>
+  <script src="rockets.js"></script>
 
 </body>
 
